--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,9 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 
-/*.syso
+/*.sln
+/*.vcxproj
+/*.vcxproj.filters
+/rapidyenc.dir/
+/rapidyenc_shared.dir/
+/x64/
