--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,11 @@ on:
   push:
     paths-ignore:
       - 'rapidyenc/**'
+      - 'src/**'
   pull_request:
     paths-ignore:
       - 'rapidyenc/**'
+      - 'src/**'
 
 jobs:
   test:
@@ -14,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        go: [1.21]
+        go: [1.21, 1.22]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
