--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,42 +80,24 @@ jobs:
             library: librapidyenc_linux_amd64.a
           - platform: linux/arm64
             library: librapidyenc_linux_arm64.a
+            toolchain: ../../toolchain-linux-arm64.cmake
 
     steps:
+      - name: Setup Cross Compiler
+        run: |
+          sudo apt-get install --yes --no-install-recommends \
+          musl-tools \
+          gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu g++-aarch64-linux-gnu gcc-arm-linux-gnueabi \
+          mingw-w64 gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 g++-mingw-w64-i686
+
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        if: matrix.platform == 'linux/arm64'
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build cross-compilation environment
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          tags: builder/${{ matrix.platform }}:latest
-          platforms: ${{ matrix.platform }}
-          load: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          push: false
-
-      - name: Build with Docker
-        uses: addnab/docker-run-action@v3
-        with:
-          image: builder/${{ matrix.platform }}:latest
-          options: |
-            --platform ${{ matrix.platform }}
-            --volume ${{ github.workspace }}:/workspace
-            --workdir /workspace
-          run: |
-            cmake -S src -B src/build \
-            -D CMAKE_BUILD_TYPE=Release
-            cmake --build src/build --target rapidyenc_static -j$(sysctl -n hw.ncpu)
-            cp src/build/rapidyenc_static/librapidyenc.a ${{ matrix.library }}
+      - name: Build
+        run: |
+          cmake -S src -B src/build -DCMAKE_TOOLCHAIN_FILE=${{ matrix.library }}
+          cmake --build src/build --config Release --target rapidyenc_static -j $(sysctl -n hw.ncpu)
+          cp src/build/rapidyenc_static/librapidyenc.a ${{ matrix.library }}
 
       - name: Upload static library
         uses: actions/upload-artifact@v3
@@ -127,7 +109,7 @@ jobs:
     name: Test ${{ matrix.os }} go/${{ matrix.go }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, ubuntu-24.04-arm, macos-latest, windows-latest]
         go: [1.22]
     runs-on: ${{ matrix.os }}
     needs: [build_linux, build_macos, build_windows]
