--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,12 +83,17 @@ jobs:
             toolchain: ../../toolchain-linux-arm64.cmake
 
     steps:
-      - name: Setup Cross Compiler
+      - name: Setup Cross Compiler (common)
+        if: matrix.platform != 'linux/amd64'
         run: |
           sudo apt-get install --yes --no-install-recommends \
-          musl-tools \
-          gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu g++-aarch64-linux-gnu gcc-arm-linux-gnueabi \
-          mingw-w64 gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 g++-mingw-w64-i686
+          build-essential musl-tools
+
+      - name: Setup Cross Compiler (linux/arm64)
+        if: matrix.platform == 'linux/arm64'
+        run: |
+          sudo apt-get install --yes --no-install-recommends \
+          gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu g++-aarch64-linux-gnu gcc-arm-linux-gnueabi
 
       - name: Checkout code
         uses: actions/checkout@v4
