--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,7 +99,7 @@ jobs:
 
       - name: Build
         run: |
-          cmake -S src -B src/build -DCMAKE_TOOLCHAIN_FILE=${{ matrix.library }}
+          cmake -S src -B src/build -DCMAKE_TOOLCHAIN_FILE=${{ matrix.toolchain }}
           cmake --build src/build --config Release --target rapidyenc_static -j $(sysctl -n hw.ncpu)
           cp src/build/rapidyenc_static/librapidyenc.a ${{ matrix.library }}
 
